argocd-k8s-resources/test01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test01
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
