argocd-k8s-resources/test01/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  serviceAccountName: namespace-reader-sa
  restartPolicy: Never
  containers:
  - name: test-container
    image: wimvandenwyngaert/k8s-version-checker:1.0.3
