argocd-k8s-resources/test01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-production-tailscale
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-svc
            port:
              number: 80
  tls:
  - hosts:
    - bluegreen-raspberrypi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-production
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bluegreen-vdww.duckdns.org
    secretName: bluegreen-vdww-tls-secret
  rules:
  - host: bluegreen-vdww.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
spec:
  ingressClassName: nginx
  rules:
  - host: blue-app.192.168.1.10.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green
spec:
  ingressClassName: nginx
  rules:
  - host: green-app.192.168.1.10.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: green-svc
            port:
              number: 80
